syntax = "proto3";
package prompt_service;

service ProtoPromptService {
    rpc SendPrompt (SendPromptRequest) returns (stream SendPromptResponse);
}

message ProtoChatMessage {
    string role = 1;
    string content = 2;
}

message SendPromptRequest {
    repeated ProtoChatMessage messages = 1;
}

message SendPromptResponse {
    string response = 1;
}